# django-fahrenheit

./: .gitignore  .travis.yml  Makefile  README.rst  manage.py  pyproject.toml  setup.cfg
example_project/: settings.py  urls.py
example_project/templates/: 451.html  451_custom.html
src/django_fahrenheit/: __init__.py  admin.py  apps.py  models.py
src/django_fahrenheit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_admin.py  test_middleware.py  test_models.py  test_settings.py  test_templatetags.py  test_utils.py  test_views.py
